--- a/ODK.Web.Razor/Pages/Groups/Events/Event.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Events/Event.cshtml
@@ -12,7 +12,7 @@
     var viewModel = await EventViewModelService.GetGroupEventPageViewModel(
         Model.ServiceRequest, Model.CurrentMemberIdOrDefault, Model.Slug, Model.EventId);
 
-    Model.Title = $"{viewModel.Event.GetDisplayName()} | {viewModel.Chapter.Name}";
+    Model.Title = $"{viewModel.Event.GetDisplayName()} | {viewModel.Chapter.GetDisplayName(Model.Platform)}";
 }
 
 @await Html.PartialAsync("Groups/_GroupBodyWithSidebar", new GroupBodyWithSidebarViewModel
