--- a/ODK.Web.Razor/Pages/Shared/_Layout.cshtml
+++ b/ODK.Web.Razor/Pages/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
 
     if (chapter != null)
     {
-        title = $"{chapter.Name} {title}";
+        title = $"{chapter.GetDisplayName(platform)} {title}";
     }
 
     var pageTitle = ViewData["Title"] as string;
