--- a/ODK.Web.Razor/Pages/Shared/_OdkChapterLayout.cshtml
+++ b/ODK.Web.Razor/Pages/Shared/_OdkChapterLayout.cshtml
@@ -30,7 +30,7 @@
         new ChapterHeaderViewModel(chapter, member, componentContext))
 }
 
-<div class="chapter chapter-theme--@chapter.Name.ToLowerInvariant()">
+<div class="chapter chapter-theme--@chapter.ShortName.ToLowerInvariant()">
     @RenderBody()
 </div>
 
