--- a/ODK.Web.Razor/Views/Shared/Account/_ConversationsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ConversationsContent.cshtml
@@ -42,7 +42,7 @@
                     {
                         <td>
                             <a href="@OdkRoutes.Groups.Group(Model.Platform, chapter)">
-                                @chapter.Name
+                                @chapter.GetDisplayName(Model.Platform)
                             </a>
                         </td>
                     }
