--- a/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventTicketsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventTicketsContent.cshtml
@@ -47,7 +47,7 @@
                         })
                     </td>
                     <td>
-                        <a href="/@Model.Chapter.Name/Admin/Members/@ticketPurchase.MemberId">@ticketPurchase.Member.FullName</a>
+                        <a href="/@Model.Chapter.ShortName/Admin/Members/@ticketPurchase.MemberId">@ticketPurchase.Member.FullName</a>
                     </td>
                     @if (Model.Event.TicketSettings.Deposit > 0)
                     {
