--- a/ODK.Web.Razor/Views/Shared/Account/_ChapterJoinContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ChapterJoinContent.cshtml
@@ -14,7 +14,7 @@
     </p>
 }
 
-<form method="post" action="/@Model.Chapter.Name/Account/Join" enctype="multipart/form-data">
+<form method="post" action="/@Model.Chapter.ShortName/Account/Join" enctype="multipart/form-data">
     @*@Html.AntiForgeryToken()*@
     
     @if (memberId == null)
