--- a/ODK.Web.Razor/Views/Shared/Account/_LoginForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_LoginForm.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ODK.Web.Razor.Models.Login.LoginViewModel
 
-<form method="post" action="@(Model.Chapter != null ? $"/{Model.Chapter.Name}" : "")/Account/Login?ReturnUrl=@Model.ReturnUrl">
+<form method="post" action="@(Model.Chapter != null ? $"/{Model.Chapter.ShortName}" : "")/Account/Login?ReturnUrl=@Model.ReturnUrl">
     @*@Html.AntiForgeryToken()*@
 
     <div class="form-group required mb-3">
@@ -14,6 +14,6 @@
 
     <div class="d-flex">
         <button type="submit" class="btn btn-primary me-auto">Sign in</button>
-        <a class="btn btn-link" href="/@(Model.Chapter != null ? $"{Model.Chapter.Name}/" : null)Account/Password/Forgotten">Forgotten password?</a>
+        <a class="btn btn-link" href="/@(Model.Chapter != null ? $"{Model.Chapter.ShortName}/" : null)Account/Password/Forgotten">Forgotten password?</a>
     </div>
 </form>        
