--- a/ODK.Web.Razor/Views/Shared/Components/_FeatureTooltip.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_FeatureTooltip.cshtml
@@ -9,7 +9,7 @@
 @inject IRequestCache RequestCache
 @inject IRequestStore RequestStore
 @{
-    var memberId = RequestStore.CurrentMemberId;
+    var (platform, memberId) = (RequestStore.Platform, RequestStore.CurrentMemberId);
     var feature = await FeatureService.GetUnseeen(memberId, Model.Name);
     if (feature == null)
     {
@@ -17,8 +17,8 @@
     }    
 
     var chapter = await new ChapterPageContext(RequestCache, HttpContextAccessor.HttpContext!)
-        .GetChapterAsync(RequestStore.Platform);
-    var description = feature.Description.Replace("{chapter.name}", chapter?.Name ?? "");
+        .GetChapterAsync(platform);
+    var description = feature.Description.Replace("{chapter.name}", chapter?.GetDisplayName(platform) ?? "");
 }
 
 <div class="ms-1 d-inline"
