--- a/ODK.Web.Razor/Views/Shared/Components/_InstagramPost.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_InstagramPost.cshtml
@@ -5,6 +5,6 @@
 
 <div class="social-media-image-tile">
     <a href="@url" target="_blank" data-bs-toggle="tooltip" data-bs-title="@Model.Caption">
-        <img src="/@Model.Chapter.Name/Instagram/Images/@Model.InstagramPostId" alt="@Model.Caption" />
+        <img src="/@Model.Chapter.ShortName/Instagram/Images/@Model.InstagramPostId" alt="@Model.Caption" />
     </a>    
 </div>
