--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupBodyWithSidebar.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupBodyWithSidebar.cshtml
@@ -1,6 +1,11 @@
 ﻿@using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Groups
+@using ODK.Web.Razor.Services
+@inject IRequestStore RequestStore
 @model GroupBodyWithSidebarViewModel
+@{
+    var platform = RequestStore.Platform;
+}
 
 @await Html.PartialAsync("Components/_BodyWithSidebar", new BodyWithSidebarViewModel
 {
@@ -8,7 +13,7 @@
     Class = "--group-body-with-sidebar",
     Menu = await Html.PartialAsync("Groups/_GroupMenu", Model.Group),
     SidebarContent = Model.SidebarContent,
-    Title = Model.Group.Chapter.Name,
+    Title = Model.Group.Chapter.GetDisplayName(platform),
     ContentFunc = 
         @<div>
             @if (!string.IsNullOrEmpty(Model.Title))
