--- a/ODK.Web.Razor/Pages/My/Groups/Events/Venues/Venue/Venue.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Events/Venues/Venue/Venue.cshtml
@@ -1,5 +1,7 @@
 ﻿@page "/my/groups/{id:guid}/events/venues/{venueId:guid}"
 @using ODK.Services.Venues
+@using ODK.Web.Razor.Models.Admin
+@using ODK.Web.Razor.Models.Components
 @model VenueModel
 @inject IVenueAdminService VenueAdminService
 @{
@@ -8,7 +10,15 @@
     var viewModel = await VenueAdminService.GetVenueViewModel(Model.AdminServiceRequest, Model.VenueId);
 }
 
-@await Html.PartialAsync("Admin/Venues/_VenueContent", viewModel)
+@await Html.PartialAsync("Components/_TwoColLeftMenu", new TwoColLeftMenuViewModel
+{
+    Title = viewModel.Venue.Name,
+    BodyContentFunc = @<div>@await Html.PartialAsync("Admin/Venues/_VenueContent", viewModel)</div>,
+    MenuContentFunc = _ => Html.PartialAsync("Admin/_AdminSideMenu", new AdminSideMenuViewModel
+    {
+        Chapter = viewModel.Chapter
+    })
+})
 
 @section scripts
 {
