--- a/ODK.Web.Razor/Pages/My/Groups/Members/Email.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Members/Email.cshtml
@@ -1,5 +1,7 @@
 ﻿@page "/my/groups/{id:guid}/members/email"
 @using ODK.Services.Members
+@using ODK.Web.Razor.Models.Admin
+@using ODK.Web.Razor.Models.Components
 @model EmailModel
 @inject IMemberAdminService MemberAdminService
 @{
@@ -9,4 +11,12 @@
     var viewModel = await MemberAdminService.GetBulkEmailViewModel(Model.AdminServiceRequest);
 }
 
-@await Html.PartialAsync("Admin/Members/_BulkEmailContent", viewModel)
+@await Html.PartialAsync("Components/_TwoColLeftMenu", new TwoColLeftMenuViewModel
+{
+    Title = "Bulk email",
+    BodyContentFunc = @<div>@await Html.PartialAsync("Admin/Members/_BulkEmailContent", viewModel)</div>,
+    MenuContentFunc = _ => Html.PartialAsync("Admin/_AdminSideMenu", new AdminSideMenuViewModel
+    {
+        Chapter = viewModel.Chapter
+    })
+})
