--- a/ODK.Web.Razor/Pages/My/Groups/Events/Event/Index.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Events/Event/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@page "/my/groups/{id:guid}/events/{eventId:guid}"
 @using ODK.Services.Events
+@using ODK.Web.Razor.Models.Admin
+@using ODK.Web.Razor.Models.Components
 @model IndexModel
 @inject IEventAdminService EventAdminService
 @{
@@ -10,4 +12,12 @@
     Model.Title = viewModel.Event.GetDisplayName();
 }
 
-@await Html.PartialAsync("Admin/Events/Event/_EventContent", viewModel)
+@await Html.PartialAsync("Components/_TwoColLeftMenu", new TwoColLeftMenuViewModel
+{
+    Title = "Edit event",
+    BodyContentFunc = @<div>@await Html.PartialAsync("Admin/Events/Event/_EventContent", viewModel)</div>,
+    MenuContentFunc = _ => Html.PartialAsync("Admin/_AdminSideMenu", new AdminSideMenuViewModel
+    {
+        Chapter = viewModel.Chapter
+    })
+})
