--- a/ODK.Web.Razor/Pages/My/Groups/Events/Event/Responses.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Events/Event/Responses.cshtml
@@ -1,5 +1,7 @@
 ﻿@page "/my/groups/{id:guid}/events/{eventId:guid}/responses"
 @using ODK.Services.Events
+@using ODK.Web.Razor.Models.Admin
+@using ODK.Web.Razor.Models.Components
 @model ResponsesModel
 @inject IEventAdminService EventAdminService
 @{
@@ -9,4 +11,12 @@
     var viewModel = await EventAdminService.GetEventAttendeesViewModel(Model.AdminServiceRequest, Model.EventId);
 }
 
-@await Html.PartialAsync("Admin/Events/Event/_EventResponsesContent", viewModel)
+@await Html.PartialAsync("Components/_TwoColLeftMenu", new TwoColLeftMenuViewModel
+{
+    Title = "Edit event",
+    BodyContentFunc = @<div>@await Html.PartialAsync("Admin/Events/Event/_EventResponsesContent", viewModel)</div>,
+    MenuContentFunc = _ => Html.PartialAsync("Admin/_AdminSideMenu", new AdminSideMenuViewModel
+    {
+        Chapter = viewModel.Chapter
+    })
+})
