--- a/ODK.Web.Razor/Pages/My/Groups/Events/Settings.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Events/Settings.cshtml
@@ -1,5 +1,7 @@
 ﻿@page "/my/groups/{id:guid}/events/settings"
 @using ODK.Services.Events
+@using ODK.Web.Razor.Models.Admin
+@using ODK.Web.Razor.Models.Components
 @model ODK.Web.Razor.Pages.My.Groups.Events.SettingsModel
 @inject IEventAdminService EventAdminService
 @{
@@ -9,4 +11,12 @@
     var viewModel = await EventAdminService.GetEventSettingsViewModel(Model.AdminServiceRequest);
 }
 
-@await Html.PartialAsync("Admin/Events/_SettingsContent", viewModel)
+@await Html.PartialAsync("Components/_TwoColLeftMenu", new TwoColLeftMenuViewModel
+{
+    Title = "Event settings",
+    BodyContentFunc = @<div>@await Html.PartialAsync("Admin/Events/_SettingsContent", viewModel)</div>,
+    MenuContentFunc = _ => Html.PartialAsync("Admin/_AdminSideMenu", new AdminSideMenuViewModel
+    {
+        Chapter = viewModel.Chapter
+    })
+})
